--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "matter-supply",
   "version": "0.1.0",
   "private": true,
+  "author": "Yebrail Andres Pacheco Jaime",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bulma": "^0.7.4",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-markdown": "^4.0.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix --ext .js,.vue src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +29,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "node-sass": "^4.11.0"
+  }
 }
