--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bulma": "^0.7.4",
+    "client-oauth2": "^4.2.3",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --fix --ext .js,.vue src"
+    "lint": "eslint --fix --ext .js"
   },
   "eslintConfig": {
     "extends": "react-app"
