--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
-    "node-sass": "^4.11.0"
+    "jest-dom": "^3.4.0",
+    "node-sass": "^4.11.0",
+    "react-testing-library": "^7.0.1"
   }
 }
